--- a/userserver.yml
+++ b/userserver.yml
@@ -1,9 +1,9 @@
 #For product service 
 spring:
   datasource:
-    url: ${url}
-    username: ${username}
-    password: ${password}
+    url: jdbc:postgresql://127.0.0.1:3242/mbanking_prod
+    username: springdb
+    password: ITE2@2024
     driverClassName: org.postgresql.Driver
   jpa:
     hibernate:
