--- a/userserver.yml
+++ b/userserver.yml
@@ -2,7 +2,7 @@
 spring:
   datasource:
     url: jdbc:postgresql://127.0.0.1:3242/mbanking_prod
-    username: springdb
+    username: ${username}
     password: ITE2@2024
     driverClassName: org.postgresql.Driver
   jpa:
