--- a/tool-service.yml
+++ b/tool-service.yml
@@ -6,5 +6,5 @@ spring:
     driverClassName: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
